# harry-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  abs.py  bot.py  conftest.py  fangraphs.py  fly.toml  main.py  mlb_api.py  persona.py  playoff_hope.py  pyproject.toml  statcast.py  statcast_patch.py  statcast_plots.py  statcast_stats.py  utils.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
commands/: __init__.py  advanced_commands.py  ai_commands.py  autocomplete.py  info_commands.py  matchup_commands.py  meta_commands.py  mlb_commands.py  presence_task.py  stats_commands.py  visual_commands.py  zone_commands.py
tests/: conftest.py  test_abs.py  test_advanced_commands.py  test_advanced_statcast.py  test_ai_commands.py  test_autocomplete.py  test_mlb_api.py  test_mlb_api_vcr.py  test_mlb_commands.py  test_persona.py  test_playoff_hope.py  test_presence_task.py  test_statcast.py  test_stats_commands.py  test_utils.py  test_visual_statcast.py
tests/cassettes/: test_fetch_injuries_returns_list.yaml  test_fetch_live_scores_game_structure.yaml  test_fetch_next_game_returns_game.yaml  test_fetch_roster_returns_players.yaml  test_fetch_transactions_returns_moves.yaml
tests/fixtures/: README.md  fg_leaderboard_bat_2024.json  fg_leaderboard_pit_2024.json
